webp fallback fixes

--- a/index.html
+++ b/index.html
@@ -119,33 +119,42 @@
                         <div class="col-md-4">
                             <div class="projects_box">
                                 <div class="projects_box">
-                                    <figure><img src="images/1.webp" alt="#"></figure>
+                                    <figure>
+                                        <source type="image/webp" srcset="images/1.webp" " alt=" ">
+                                        <img src="images/1.png " alt=" ">
+                                    </figure>
                                 </div>
                                 <h2>SDLC</h2>
                                 <p>Our clients use our services for the whole range of the SDLC (Software Development Life Cycle), parts of it or all of it. It can be on an innovative new product with a cutting edge technology or a mature product with a
                                     support legacy plan, design, POCs, development, Validation, QA and maintenance engineering</p>
-                                <!-- <a class="read_more" href="#">Read more</a> --></div>
+                                <!-- <a class="read_more " href="# ">Read more</a> --></div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="projects_box">
-                                <div class="projects_box">
-                                    <figure><img src="images/2.webp" alt="#"></figure>
+                        <div class="col-md-4 ">
+                            <div class="projects_box ">
+                                <div class="projects_box ">
+                                    <figure>
+                                        <source type="image/webp " srcset="images/2.webp " " alt=" ">
+                                        <img src="images/2.png " alt=" ">
+                                    </figure>
                                 </div>
                                 <h2>R&D</h2>
                                 <p>We are focused on working with R&D organizations using the latest technologies, whether new and agile start-ups or well-established growing, technology companies – Our goal is to enable our clients to fully express their
                                     innovation
                                 </p>
-                                <!-- <a class="read_more" href="#">Read more</a> --></div>
+                                <!-- <a class="read_more " href="# ">Read more</a> --></div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="projects_box">
-                                <div class="projects_box">
-                                    <figure><img src="images/3.webp" alt="#"></figure>
+                        <div class="col-md-4 ">
+                            <div class="projects_box ">
+                                <div class="projects_box ">
+                                    <figure>
+                                        <source type="image/webp" srcset="images/3.webp" " alt=" ">
+                                        <img src="images/3.png " alt=" ">
+                                    </figure>
                                 </div>
                                 <h2>Agile</h2>
                                 <p>We are a full agile operation. We also adopt any or all of our Client’s standards, starting from coding convention all the way to continuous integration using our client’s systems for source control and bug tracking. All
                                     of our developers have a fast data connection and can attend video conferences and face-to-face meeting as if they were in the next room.</p>
-                                <!-- <a class="read_more" href="#">Read more</a> --></div>
+                                <!-- <a class="read_more " href="# ">Read more</a> --></div>
                         </div>
                     </div>
                 </div>
@@ -154,152 +163,155 @@
     </div>
     <!-- end projects -->
     <!-- business -->
-    <div class="business">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="titlepage"><span>WHAT WE DO</span>
+    <div class="business ">
+        <div class="container ">
+            <div class="row ">
+                <div class="col-md-12 ">
+                    <div class="titlepage "><span>WHAT WE DO</span>
                         <h2>Our mission is to enable our clients to go-to-market ASAP with the highest technical skills and at the lowest cost.</h2>
                         <p>Sourcico specializes in building highly productive team extensions for R&D divisions while saving a lot of money for its customers.</p>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-10 offset-md-1">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="business_box">
-                                <figure><img src="images/business_img.webp" alt="#"></figure>
-                                <p>Sourcico specializes in building highly productive team extensions for R&D divisions while saving a lot of money for its customers.</p><a class="read_more" href="services.html">Read more</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- end business -->
-    <!-- Testimonial -->
-    <div class="section Testimonial_sec">
-        <div class="container">
-            <div id="" class="Testimonial">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="titlepage">
-                            <h2>Locations</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="Testimonial_box"><i><img src="images/plan1.webp" alt="#"></i></div>
-                    </div>
-                    <div class="col-md-9">
-                        <div class="Testimonial_box">
-                            <h4>Israel, Tel Aviv</h4>
-                            <p>Our Israeli branch is located in Tel Aviv and is serving mainly the Israeli high-tech industry, it’s well established clients as well as it’s younger and agile startups. Our Management, sales and Administration is based in
-                                Tel Aviv.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="Testimonial_box"><i><img src="images/plan2.webp" alt="#"></i></div>
-                    </div>
-                    <div class="col-md-9">
-                        <div class="Testimonial_box">
-                            <h4>Skopje, Macedonia</h4>
-                            <p>Our competence center in Macedonia enjoys a huge talent pool of the finest engineers (around 6,000 in Skopje), in a friendly and beautiful country that has a very rapidly growing economy (3rd in growth rate in Europe 2014)
-                                specially the IT industry, a vivid developers community, all within a short flight away and only one hour time zone difference from Israel.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="Testimonial_box"><i><img src="images/plan3.webp" alt="#"></i></div>
-                    </div>
-                    <div class="col-md-9">
-                        <div class="Testimonial_box">
-                            <h4>Chișinău, Moldova</h4>
-                            <p>In the heart of Moldova in addition to its famously good wines there is a healthy growing community of engineering & science serving as one of the most important growth engines of the local economy. The local IT community is
-                                significantly supported by the government and the Moldavian talent pool proved to be a perfect location for our second competence center.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- end Testimonial -->
-    <!-- contact -->
-    <div id="contact" class="contact">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="titlepage">
-                        <h2>Contact us</h2><span>Please feel free to drop us a message with any question, We would love to hear from you!</span></div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <form class="main_form" method="POST" data-netlify="true">
-                        <div class="row">
-                            <div class="col-md-12"><input class="form_contril" placeholder="Name " type="text" name="Name "></div>
-                            <div class="col-md-12"><input class="form_contril" placeholder="Phone Number" type="text" name=" Phone Number"></div>
-                            <div class="col-md-12"><input class="form_contril" placeholder="Email" type="email" name="Email"></div>
-                            <div class="col-md-12"><textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea></div>
-                            <div class="col-md-12">
-                                <div data-netlify-recaptcha="true"></div>
+            <div class="row ">
+                <div class="col-md-10 offset-md-1 ">
+                    <div class="row ">
+                        <div class="col-md-12 ">
+                            <div class="business_box ">
+                                    <figure>
+                                    <source type="image/webp " srcset="images/business_img.webp " " alt=" ">
+                                        <img src="images/business_img.jpg" alt=" ">
+                                    </figure>
+                                    <p>Sourcico specializes in building highly productive team extensions for R&D divisions while saving a lot of money for its customers.</p><a class="read_more " href="services.html ">Read more</a></div>
                             </div>
-                            <div class="col-sm-12"><button type="submit" class="send_btn">Send</button></div>
                         </div>
-                    </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- end contact -->
-    <!--  footer -->
-    <footer>
-        <div class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12">
-                        <!-- <div class="cont">
-                            <h3> <strong class="multi"> Free Multipurpose Responsive</strong><br> Landing Page 2019
+        <!-- end business -->
+        <!-- Testimonial -->
+        <div class="section Testimonial_sec ">
+            <div class="container ">
+                <div id=" " class="Testimonial ">
+                    <div class="row ">
+                        <div class="col-md-12 ">
+                            <div class="titlepage ">
+                                <h2>Locations</h2>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-3 ">
+                            <div class="Testimonial_box "><i><img src="images/plan1.webp " alt="# "></i></div>
+                        </div>
+                        <div class="col-md-9 ">
+                            <div class="Testimonial_box ">
+                                <h4>Israel, Tel Aviv</h4>
+                                <p>Our Israeli branch is located in Tel Aviv and is serving mainly the Israeli high-tech industry, it’s well established clients as well as it’s younger and agile startups. Our Management, sales and Administration is based
+                                    in Tel Aviv.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-3 ">
+                            <div class="Testimonial_box "><i><img src="images/plan2.webp " alt="# "></i></div>
+                        </div>
+                        <div class="col-md-9 ">
+                            <div class="Testimonial_box ">
+                                <h4>Skopje, Macedonia</h4>
+                                <p>Our competence center in Macedonia enjoys a huge talent pool of the finest engineers (around 6,000 in Skopje), in a friendly and beautiful country that has a very rapidly growing economy (3rd in growth rate in Europe 2014)
+                                    specially the IT industry, a vivid developers community, all within a short flight away and only one hour time zone difference from Israel.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-md-3 ">
+                            <div class="Testimonial_box "><i><img src="images/plan3.webp " alt="# "></i></div>
+                        </div>
+                        <div class="col-md-9 ">
+                            <div class="Testimonial_box ">
+                                <h4>Chișinău, Moldova</h4>
+                                <p>In the heart of Moldova in addition to its famously good wines there is a healthy growing community of engineering & science serving as one of the most important growth engines of the local economy. The local IT community
+                                    is significantly supported by the government and the Moldavian talent pool proved to be a perfect location for our second competence center.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end Testimonial -->
+        <!-- contact -->
+        <div id="contact " class="contact ">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-md-12 ">
+                        <div class="titlepage ">
+                            <h2>Contact us</h2><span>Please feel free to drop us a message with any question, We would love to hear from you!</span></div>
+                    </div>
+                </div>
+            </div>
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-md-12 ">
+                        <form class="main_form " method="POST " data-netlify="true ">
+                            <div class="row ">
+                                <div class="col-md-12 "><input class="form_contril " placeholder="Name " type="text " name="Name "></div>
+                                <div class="col-md-12 "><input class="form_contril " placeholder="Phone Number " type="text " name=" Phone Number "></div>
+                                <div class="col-md-12 "><input class="form_contril " placeholder="Email " type="email " name="Email "></div>
+                                <div class="col-md-12 "><textarea class="textarea " placeholder="Message " type="text " name="Message "></textarea></div>
+                                <div class="col-md-12 ">
+                                    <div data-netlify-recaptcha="true "></div>
+                                </div>
+                                <div class="col-sm-12 "><button type="submit " class="send_btn ">Send</button></div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end contact -->
+        <!--  footer -->
+        <footer>
+            <div class="footer ">
+                <div class="container ">
+                    <div class="row ">
+                        <div class="col-md-12 ">
+                            <!-- <div class="cont ">
+                            <h3> <strong class="multi "> Free Multipurpose Responsive</strong><br> Landing Page 2019
                             </h3>
                         </div> --></div>
-                    <div class="col-md-12">
-                        <ul class="social_icon">
-                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        </ul>
+                        <div class="col-md-12 ">
+                            <ul class="social_icon ">
+                                <li><a href="# "><i class="fa fa-facebook " aria-hidden="true "></i></a></li>
+                                <li><a href="# "><i class="fa fa-twitter " aria-hidden="true "></i></a></li>
+                                <li><a href="# "><i class="fa fa-linkedin " aria-hidden="true "></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="copyright">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <p>Copyright 2020 All Right Reserved By Sourcico</p>
+                <div class="copyright ">
+                    <div class="container ">
+                        <div class="row ">
+                            <div class="col-md-12 ">
+                                <p>Copyright 2020 All Right Reserved By Sourcico</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
-    <!-- end footer -->
-    <!-- Javascript files-->
-    <script src="js/jquery.min.js"></script>
-    <!-- <script src="js/popper.min.js"></script> -->
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.0.0.min.js"></script>
-    <!-- <script src="js/plugin.js"></script> -->
-    <!-- sidebar -->
-    <!-- <script src="js/jquery.mCustomScrollbar.concat.min.js"></script> -->
-    <script src="js/custom.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script> -->
+        </footer>
+        <!-- end footer -->
+        <!-- Javascript files-->
+        <script src="js/jquery.min.js "></script>
+        <!-- <script src="js/popper.min.js "></script> -->
+        <script src="js/bootstrap.bundle.min.js "></script>
+        <script src="js/jquery-3.0.0.min.js "></script>
+        <!-- <script src="js/plugin.js "></script> -->
+        <!-- sidebar -->
+        <!-- <script src="js/jquery.mCustomScrollbar.concat.min.js "></script> -->
+        <script src="js/custom.js "></script>
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js "></script> -->
 </body>
 
 </html>
