fix index logo img

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                                 <div class="center-desk">
                                     <div class="logo">
                                         <a href="index.html">
-                                            <picture>
+                                            <figure>
                                                 <source type="image/webp" srcset="images/logo.webp" alt="">
                                                 <img src="images/logo.png" alt="">
-                                            </picture>
+                                            </figure>
                                         </a>
                                     </div>
                                 </div>
